@@ -1,4 +1,4 @@
-/* Time-stamp: <2005-10-03 22:10:01 jcs>
+/* Time-stamp: <2005-11-19 15:41:48 jcs>
 |
 |  Copyright (C) 2002-2005 Jorg Schuler <jcsjcs at users sourceforge net>
 |  Part of the gtkpod project.
@@ -79,7 +79,6 @@ void st_create_tabs (void);
 void st_remove_track (Track *track, guint32 inst);
 void st_init (ST_CAT_item new_category, guint32 inst);
 void st_create_notebook (gint inst);
-void st_redisplay (guint32 inst);
 void st_cleanup (void);
 void st_set_default_sizes (void);
 void st_update_default_sizes (void);
